--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon --quiet"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +14,5 @@
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.18.9",
-    "@babel/preset-typescript": "^7.18.6",
-    "jest": "^28.1.3"
   }
 }
